--- a/hazijavitorendszer/Dockerfile.release
+++ b/hazijavitorendszer/Dockerfile.release
@@ -2,6 +2,6 @@ FROM hazibase
 
 ENTRYPOINT chmod -R 550 /HW/ && \
             (chown root:root /home/dummy/info; chown dummy:dummy /home/dummy/*.*; true)2> /dev/null && \
+           iptables -A OUTPUT -m owner --uid-owner dummy -j DROP && \
            /HW/main
-
 ADD HW /HW
