timelimit and mailsend-go password

--- a/hazijavitorendszer/Dockerfile.test
+++ b/hazijavitorendszer/Dockerfile.test
@@ -2,6 +2,6 @@ FROM hazibase
 
 ENTRYPOINT chmod -R 550 /HW/ && \
             (chown root:root /home/dummy/info; chown dummy:dummy /home/dummy/*.*; true)2> /dev/null && \
-           /HW/main
+           timeout --kill-after=10s 60s /HW/main
 
 ADD HW /HW
