--- a/hazijavitorendszer/Dockerfile
+++ b/hazijavitorendszer/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 
 ADD https://github.com/muquit/mailsend-go/releases/download/v1.0.9/mailsend-go_1.0.9_linux-64bit.deb /mailsend-go.deb
-ADD https://bootstrap.pypa.io/get-pip.py /get-pip.py
+ADD https://bootstrap.pypa.io/2.7/get-pip.py /get-pip.py
 
 RUN apt update && apt -y upgrade
 RUN apt -y install python2 python3-pip coreutils build-essential libssl-dev kmod iptables && \
