--- a/.github/workflows/update_hash.yaml
+++ b/.github/workflows/update_hash.yaml
@@ -10,8 +10,8 @@ jobs:
     - name: Commit readme
       run: |
         git add README.md
-        git config --global user.name 'Your Name'
-        git config --global user.email 'your-username@users.noreply.github.com'
+        git config --global user.name 'Bot of github.com/gaebor/hazi'
+        git config --global user.email 'bot-of-gaebor-hazi@users.noreply.github.com'
         git commit -m "update hash of commit `git log -n 1 --pretty=format:%H` in readme" README.md
         git push
  
